--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
-    "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.8",
     "soap": "^0.45.0",
     "web-vitals": "^2.1.4"
